<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        tools:context=".View.CadastroAluno">

    <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_aluno"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="40dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idade">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota_1">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nota1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nota_2">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nota2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVoltar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltar"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:cornerRadius="8dp"
                    android:layout_marginEnd="8dp"
                 />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCadastrar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cadastrar"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@color/black"
                    android:layout_marginStart="8dp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>